# Intelligent_driving_assistance_system

./: CMakeLists.txt  LICENSE  README.md
Intelligent_driving/: CMakeLists.txt
Intelligent_driving/para/: camera.xml
Intelligent_driving/serial/: Serial.cpp  Serial.h
Intelligent_driving/src/: main.cpp
Intelligent_driving/src/auto_drive/: autodrive.cpp  autodrive.h
Intelligent_driving/src/common/: rvec2elur.cpp  rvec2elur.h  segment.cpp  segment.h
Intelligent_driving/src/findplate/: findplate.cpp  findplate.h
Intelligent_driving/src/park/: Park.cpp
get_license_content/: README.md  server.py
lpr/: CMakeLists.txt  README.md  findplate.cpp  findplate.h  hyperlpr.py  main.cpp  server.py
lpr/findplate/: findplate.h
lpr/para/: camera.xml
lpr/socket/: client.cpp  client.h
para/: camera.xml
src/: main.cpp
src/auto_drive/: autodrive.cpp  autodrive.h
src/autofollow/: AutoFollow.cpp  AutoFollow.h
src/common/: rotate.cpp
src/findplate/: codeRotate.h  findplate.cpp  findplate.h  myThreshold.cpp  myThreshold.h  segment.cpp  segment.h
src/park/: Park.h
src/socket/: client.cpp  client.h
src/thread/: thread.cpp  thread.h
